fixed text centering for the previous roles section on mobile app

--- a/src/components/Experience/experience.module.css
+++ b/src/components/Experience/experience.module.css
@@ -102,4 +102,10 @@
     width: 100%;
     gap: 9px;
   }
+  .historyItem h3{
+    text-align: center;
+  }
+  .historyItem p {
+    text-align: center;
+  }
 }
